syntax = "proto3";

package communication;

import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string username = 2;
    string display_name = 3;
    string status = 4;
    google.protobuf.Timestamp created_at = 5;
}

// Типы отношений между пользователями
enum RelationshipType {
    RELATIONSHIP_UNSPECIFIED = 0; 
    RELATIONSHIP_FRIEND = 1;  
    RELATIONSHIP_BLOCKED = 2; 
    RELATIONSHIP_PENDING = 3; 
}

// Статус запроса на установление отношения
enum RelationshipStatus {
    STATUS_UNSPECIFIED = 0; 
    STATUS_ACCEPTED = 1; 
    STATUS_REJECTED = 2;
    STATUS_PENDING = 3;
}

message CreateRelationshipRequest {
    string current_user = 1;
    string target_user = 2;
}

message CreateRelationshipResponse {
    RelationshipStatus status = 1;
    google.protobuf.Timestamp created_at = 2;
}

message UpdateRelationshipRequest {
    string current_user = 1;
    string target_user = 2;
    RelationshipType new_type = 3;  
    RelationshipStatus new_status = 4;  
}

message UpdateRelationshipResponse {
    bool success = 1;
}

message GetRelationshipsRequest {
    string current_user = 1;
    RelationshipType new_type = 2;
    int32 limit = 3;
    int32 offset = 4;
}

message GetRelationshipsResponse {
    repeated User users = 1;
    repeated int32 types = 2;
    repeated int32 statuses = 3;
    repeated string initiator_statuses = 4;
    int32 total_count = 5;
}

message GetRelationshipStatusRequest {
    string target_user = 1;
    string current_user = 2;
}

message GetRelationshipStatusResponse {
    bool success = 1;
    google.protobuf.Timestamp updated_at = 3;
}

message CancelRelationshipRequest {
    string current_user = 1;
    string target_user = 2;
}

message CancelRelationshipResponse {
    bool success = 1;
}