syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";

message User {
    message userKey {
        string public_key = 1;
        bool is_revoked = 2;
    }

    message userSettings {
        string avatar_url = 1;
        string theme_url = 2;
        string language = 3;
        string notification_settings = 4;
        string privacy_settings = 5;
    }

    message userRelationships {
        int64 target_user_id = 1;
        bool status = 2;
        google.protobuf.Timestamp updated_at = 3;
    }

    int64 id = 1;
    string username = 2;
    string email = 3;
    string status = 4;
    string activity_user = 5;
    userKey key = 6;
    userSettings settings = 7;
    repeated userRelationships relationships = 8;
    google.protobuf.Timestamp last_seen_at = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp update_at = 11;
}

message UserResponse { User user = 1; }

message GenericResponse {
    string status = 1;
    string message = 2;
}
